--- a/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.html
+++ b/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.html
@@ -3189,9 +3189,9 @@ slide:not(.current) .plotly.html-widget{
 
 <!-- ``` -->
 
-<slide class=""><hgroup><h2>The New Zealand Attitudes and Values Study</h2></hgroup><article  id="the-new-zealand-attitudes-and-values-study" class="smaller ">
+<slide class=""><hgroup><h2>The New Zealand Attitudes and Values Study</h2></hgroup><article  id="the-new-zealand-attitudes-and-values-study" class="smaller build">
 
-<ul class = 'build'>
+<ul>
 <li><p>Planned 20-year longitudinal study, currently in its 12\(^{th}\) year.</p></li>
 <li><p>Sample frame drawn randomly from NZ Electoral Roll.</p></li>
 <li><p>Postal questionnaire (coverage; retention ~ 80%)</p></li>
@@ -3201,9 +3201,9 @@ slide:not(.current) .plotly.html-widget{
 <li><p>Here, we will draw on repsonses from <em>N</em> = 26,790 longitudinal participants who responded to two or more waves from 2009 – 2018</p></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>We investigate the following beliefs</h2></hgroup><article  id="we-investigate-the-following-beliefs" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>We investigate the following beliefs</h2></hgroup><article  id="we-investigate-the-following-beliefs" class="smaller build">
 
-<ol class = 'build'>
+<ol>
 <li><p>Climate beliefs: climate change: (a) is real (b) is human caused</p></li>
 <li><p>Climate concern</p></li>
 <li><p>Beliefs that my behaviour can protect the environment</p></li>
@@ -3273,7 +3273,7 @@ slide:not(.current) .plotly.html-widget{
 
 <aside class='note'><section><p>We quantitatively consider:</p>
 
-<ol class = 'build'>
+<ol>
 <li><em>Between Person Differences</em>: &ldquo;How do political and religious commitments predict ecological attitudes and behaviors&rdquo;;</li>
 <li><em>Time Trends</em>: &ldquo;How are these relationships changing overtime&rdquo;</li>
 <li><em>Within Person Differences</em>: &ldquo;how does change within an individual in political and religious commitments affect ecological attitudes and behaviors?&rdquo;</li>
@@ -3281,9 +3281,8 @@ slide:not(.current) .plotly.html-widget{
 <li>References:</li>
 </ol>
 
-<ul class = 'build'>
-<li><a href='https://easystats.github.io/parameters/reference/demean.html' title=''>https://easystats.github.io/parameters/reference/demean.html</a></li>
-<li>Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality &amp; Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods &amp; Research, 1–28. <a href='https://doi.org/10.1177/0049124120914934' title=''>https://doi.org/10.1177/0049124120914934</a> // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge</li>
+<ul>
+<li><a href='https://easystats.github.io/parameters/reference/demean.html' title=''>https://easystats.github.io/parameters/reference/demean.html</a> <!-- - Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality & Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods & Research, 1–28. https://doi.org/10.1177/0049124120914934 // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge --></li>
 </ul></section></aside>
 
 <!-- Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association. -->
@@ -3310,7 +3309,7 @@ slide:not(.current) .plotly.html-widget{
 
 <aside class='note'><section><p>Key points:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Over the past decade, there has been a strong trend for increasing climate reality beliefs.</li>
 <li>The gap between political conservatives and liberals is large, and constant (i.e. no interaction).</li>
 </ul></section></aside>
@@ -3321,7 +3320,7 @@ slide:not(.current) .plotly.html-widget{
 
 <aside class='note'><section><p>Key points:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Those who become more conservative are expected to become less believing of climate change over time.</li>
 <li>Those who become more liberal are expected to become more believing of climate change over time.</li>
 </ul></section></aside>
@@ -3332,7 +3331,7 @@ slide:not(.current) .plotly.html-widget{
 
 <aside class='note'><section><p>Key points:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Religious people are less accepting of climate change.</li>
 <li>Nonlinear change: the gap between highly identified religious people and secular people is <em>growing</em>.</li>
 </ul></section></aside>
@@ -3699,7 +3698,7 @@ Observations
 
 <aside class='note'><section><p>Similar story:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Over the past decade, there has been a strong trend for increasing human-caused climate reality beliefs</li>
 <li>The gap between political conservatives and liberals is large, and constant (i.e. no interaction)</li>
 </ul></section></aside>
@@ -3710,7 +3709,7 @@ Observations
 
 <aside class='note'><section><p>Similar story:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Those who become more conservative are expected to become less believing of human-caused climate change over time.</li>
 <li>Those who become more liberal are expected to become more believing of human-caused climate change over time.</li>
 </ul></section></aside>
@@ -3721,7 +3720,7 @@ Observations
 
 <aside class='note'><section><p>Similar story:</p>
 
-<ul class = 'build'>
+<ul>
 <li>Religious people are less accepting of human-caused climate change.</li>
 <li>Nonlinear trend: the gap between highly identified religious people and secular people is <em>growing</em>.</li>
 </ul></section></aside>
@@ -4172,7 +4171,7 @@ Observations
 
 <aside class='note'><section><p>Action: where the rubber (does not) meet the road and carbon is spared. Here, we’re just looking at reported action, but there many other indicators to consider.</p>
 
-<ul class = 'build'>
+<ul>
 <li>See our variables at in the second link (the spreadsheet) at: <a href='https://www.psych.auckland.ac.nz/en/about/new-zealand-attitudes-and-values-study/nzavs-tech-docs.html' title=''>https://www.psych.auckland.ac.nz/en/about/new-zealand-attitudes-and-values-study/nzavs-tech-docs.html</a></li>
 </ul></section></aside>
 
@@ -4208,9 +4207,9 @@ Observations
 
 <!-- ``` -->
 
-</article></slide><slide class=""><hgroup><h2>Summary and Questions</h2></hgroup><article  id="summary-and-questions" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Summary and Questions</h2></hgroup><article  id="summary-and-questions" class="smaller build">
 
-<ul class = 'build'>
+<ul>
 <li><p>Compared with a decade ago, New Zealanders are substantially (1) more aware (2) more believing of and concerned about climate change.</p></li>
 <li><p>Sacrificial behaviour has been slow to follow this increasing concern.</p></li>
 <li><p>Those who become more conservativism are expected to present relatively <em>diminished environmental beliefs, concerns, and behaviors</em>, whereas those who become less conservative are expected to present relatively <em>greater environmental beliefs, concerns, and behaviors</em>.</p></li>
@@ -4223,9 +4222,9 @@ Observations
 
 <aside class='note'><section><p>Substantial information in this dataset and many &ldquo;natural experiments&rdquo; – the devastating Christchurch and Kaikoura earthquakes; the Christchurch mosque shootings; the COVID-19 lockdowns and recovery; several Rugby cup wins and losses; political changes … also many events within people – birth, death, illness, recovery, retirement … We’d love to collaborate with you. Please get in touch.</p></section></aside>
 
-</article></slide><slide class=""><hgroup><h2>Thanks to</h2></hgroup><article  id="thanks-to" class="smaller ">
+</article></slide><slide class=""><hgroup><h2>Thanks to</h2></hgroup><article  id="thanks-to" class="smaller build">
 
-<ul class = 'build'>
+<ul>
 <li><p>Dom Johnson, Oxford University, for the idea to look at the social consequences of religion and ecology.</p></li>
 <li><p>Chris G Sibley, University of Auckland for starting &amp; leading the NZAVS.</p></li>
 <li><p>The 40 - 60 NZAVS collaborators working to keep the study going, including <em>Donnie Davis</em> (virtue project co-investigator), Daryl Van Tongeren &amp; Ev Worthington (collaborators).</p></li>
@@ -4248,7 +4247,7 @@ Observations
 
 <aside class='note'><section><p>The &ldquo;Retake&rdquo;</p>
 
-<ul class = 'build'>
+<ul>
 <li><p>identify a previously published study in the bio-cultural study of religion and engage it: reanalysis or novel data, novel methods, new conceptualization</p></li>
 <li><p>encouraged to collaborate with the authors of the previously published study</p></li>
 <li><p>authors of the previously published study are encouraged to submit retakes of their previously published research</p></li>
